--- a/src/app/Admin/dashboard/component/video/video.component.html
+++ b/src/app/Admin/dashboard/component/video/video.component.html
@@ -13,7 +13,7 @@
         <td scope="col" width="50" >#</td>
         <td>Tiêu đề</td>
         <td>Loại video</td>
-        <td >Video</td>
+        <td >link video</td>
         <td >Mô tả</td>
         <td >Chức năng</td>
     </tr>
