--- a/src/app/user/home/component/detail/detail.component.html
+++ b/src/app/user/home/component/detail/detail.component.html
@@ -7,7 +7,7 @@
                       <img [src]="detail_img_src"  class="product__details__pic__item--large"
                       alt="">
                   </div>
-                  <div class="product__details__pic__slider owl-carousel">
+                  <!-- <div class="product__details__pic__slider owl-carousel">
                       <img data-imgbigurl="./assets/image/product/details/product-details-2.jpg"
                           src="./assets/image/product/details/thumb-1.jpg" alt="">
                       <img data-imgbigurl="img/product/details/product-details-3.jpg"
@@ -16,7 +16,7 @@
                           src="./assets/image/product/details/thumb-3.jpg" alt="">
                       <img data-imgbigurl="img/product/details/product-details-4.jpg"
                           src="./assets/image/product/details/thumb-4.jpg" alt="">
-                  </div>
+                  </div> -->
               </div>
           </div>
           <div class="col-lg-6 col-md-6">
