--- a/src/app/user/home/header/header.component.html
+++ b/src/app/user/home/header/header.component.html
@@ -6,8 +6,8 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="header__top__left">
                         <ul>
-                            <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-                            <li>Free Shipping for all Order of $99</li>
+                            <li><i class="fa fa-envelope"></i> bichquyen.vat@gmail.com</li>
+                            <li>Giao hàng miễn phí cho tất cả đơn hàng $99</li>
                         </ul>
                     </div>
                 </div>
@@ -46,18 +46,18 @@
             <div class="col-lg-6">
                 <nav class="header__menu">
                     <ul>
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">Pages</a>
+                        <li class="active"><a href="">Trang chủ</a></li>
+                        <li><a href="san-pham">Cửa hàng</a></li>
+                        <li><a href="#">Trang</a>
                             <ul class="header__menu__dropdown">
                                 <li><a href="#">Shop Details</a></li>
-                                <li><a href="#">Shoping Cart</a></li>
+                                <li><a href="video">Video</a></li>
                                 <li><a href="#">Check Out</a></li>
                                 <li><a href="#">Blog Details</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="blog">Bài viết</a></li>
+                        <li><a href="lien-he">Liên hệ</a></li>
                     </ul>
                 </nav>
             </div>
@@ -65,7 +65,7 @@
                 <div class="header__cart">
                     <ul>
                         <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
-                        <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                        <li><a href="gio-hang"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
                     </ul>
                     <div class="header__cart__price">item: <span>$150.00</span></div>
                 </div>
